cleaned up dependencies